tests/negative/protected_method_access.lu
require "godot"

class ProtectedBase
  protected

  def secret: String
    return "family"
  end
end

class Intruder
  def steal(target: ProtectedBase): String
    return target.secret
  end
end

class Main < Node
  def ready: void
    intruder: Intruder = Intruder.new
    value: String = intruder.steal(ProtectedBase.new)
  end
end
